fix the title max line break in post page

--- a/themes/ESGI-theme/src/css/components/_blog-page.scss
+++ b/themes/ESGI-theme/src/css/components/_blog-page.scss
@@ -81,6 +81,12 @@
                         font-size: 1.4rem;
                         font-weight: 500;
                         line-height: 1.3;
+                        display: -webkit-box;
+                        -webkit-line-clamp: 2;
+                        line-clamp: 2;
+                        -webkit-box-orient: vertical;
+                        overflow: hidden;
+                        text-overflow: ellipsis;
 
                         a {
                             color: var(--text-color);
@@ -216,6 +222,12 @@
 
                         h2 {
                             font-size: 1.2rem;
+                            display: -webkit-box;
+                            -webkit-line-clamp: 2;
+                            line-clamp: 2;
+                            -webkit-box-orient: vertical;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
                         }
 
                         .post-excerpt {
@@ -273,6 +285,12 @@
                         h2 {
                             font-size: 1.1rem;
                             margin-bottom: 12px;
+                            display: -webkit-box;
+                            -webkit-line-clamp: 2;
+                            line-clamp: 2;
+                            -webkit-box-orient: vertical;
+                            overflow: hidden;
+                            text-overflow: ellipsis;
                         }
 
                         .post-excerpt {
